package Model.Enums;

public enum EntityType {
    SHIP, SHOT, ASTEROID
}
