package Model.Enums;

public enum ShotType {
    SHOT, SPREAD, LASER
}
